Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-38499

cmake and compile errors on MacOSX when compiling mariadb from a git tree

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 12.3
    • 12.3.1
    • Compiling
    • None
    • Not for Release Notes

    Description

      When compiling the server on MacOSX as described in https://mariadb.com/docs/server/server-management/install-and-upgrade-mariadb/installing-mariadb/compiling-mariadb-from-source/build_environment_setup_for_mac I get a lot of warnings.

      $cat compile.out | grep 'warning:' | wc -l
            97
      $cat cmake.out | grep 'CMake Warning' | wc -l
             3
       
      Note that some of the errors are repeating too:
      $cat compile.out | grep 'warning:' | sort -u | wc -l 
            44
       
      -- just the warnings with the file names cut
      $cat compile.out | grep 'warning:' | cut -f 2- -d ' ' | sort -u  | wc -l
             6
      $cat compile.out | grep 'warning:' | cut -f 2- -d ' ' | sort -u         
      warning: 'sprintf' is deprecated: This function is provided for compatibility reasons only.  Due to security concerns inherent in the design of sprintf(3), it is highly recommended that you use snprintf(3) instead. [-Wdeprecated-declarations]
      warning: ignoring duplicate libraries: '../../dbug/libdbug.a', '../../mysys/libmysys.a', '../../strings/libstrings.a'
      warning: ignoring duplicate libraries: '../dbug/libdbug.a', '../mysys/libmysys.a', '../strings/libstrings.a'
      warning: ignoring duplicate libraries: '../dbug/libdbug.a', '../strings/libstrings.a', 'libmysys.a'
      warning: ignoring duplicate libraries: '../mysys/libmysys.a', '../strings/libstrings.a', 'libdbug.a'
      warning: suspicious sequence in the output: b4_bin [-Wother]
      
      

      This is how I compile it:

      git clone <github url> src
      cd src
       
      cmake ..         -DENABLE_GCOV=OFF         -DCMAKE_C_FLAGS=-fno-color-diagnostics         -DCMAKE_CXX_FLAGS=-fno-color-diagnostics         -DCMAKE_COLOR_MAKEFILE=OFF         -DCMAKE_VERBOSE_MAKEFILE=OFF         -DCMAKE_BUILD_TYPE=Debug         -DCMAKE_EXPORT_COMPILE_COMMANDS=ON         -DMYSQL_MAINTAINER_MODE=OFF         -DPLUGIN_ARCHIVE=NO         -DPLUGIN_MROONGA=NO         -DPLUGIN_CONNECT=NO         -DPLUGIN_SPIDER=NO         -DPLUGIN_ROCKSDB=NO         -DPLUGIN_OQGRAPH=NO         -DPLUGIN_TOKUDB=NO         -DWITH_ASAN=OFF         -DWITH_MSAN=OFF         -DWITH_SAFEMALLOC=ON         -DWITH_MARIABACKUP=OFF         -DWITH_EMBEDDED_SERVER=OFF         -DWITH_UNIT_TESTS=OFF         -DCONC_WITH_UNITTEST=OFF         -DWITH_WSREP=OFF         -DWITHOUT_DYNAMIC_PLUGINS=0         -DWITH_SSL=bundled         -DWITH_PCRE=bundled 2>&1 | tee cmake.out 
       
      cmake --build . --parallel 8 2>&1 | tee compile.out
      
      

      Ideally there should be no compilation warnings.

      Attachments

        1. cmake.out
          40 kB
        2. compile.out
          185 kB

        Issue Links

          Activity

            People

              gkodinov Georgi Kodinov
              gkodinov Georgi Kodinov
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 4h 20m
                  4h 20m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.