sql/sql_yacc.yy
@@ -6595,7 +6595,7 @@ field_type_lob:
           { $$.set(&type_handler_medium_blob); }
         | JSON_SYM opt_compressed
           {
-            Lex->charset= &my_charset_utf8mb4_bin;
+            Lex->charset= &MY_CHARSET_UTF8MB4_BIN;
             $$.set(&type_handler_long_blob_json);
           }
         ;
